<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="ime_name">AnySoftKeyboard</string>
    <string name="settings_app_name">AnySoftKeyboard Settings</string>
    <string name="spell_checker_service_name">AnySoftKeyboard Spell Checker</string>
    <string name="spell_checker_settings">AnySoftKeyboard Speller Settings</string>
    <string name="subtype_generic">speller-generic</string>
    <string name="copyright_text">Copyright\u0020©\u0020<xliff:g id="year">%d</xliff:g>\u0020<xliff:g id="owner">%s</xliff:g></string>
    <string name="version_text"><xliff:g id="version_name">%s</xliff:g>\u0020(v<xliff:g id="version_number">%s</xliff:g>)</string>
    <string name="additional_licenses"><u>Additional licenses…</u></string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point</string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for details.</string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is
        <xliff:g id="trace_file">%s</xliff:g>
    </string>
    <string name="menu_about_item">About</string>
    <string name="click_to_restart_suggestions">Click for suggestions</string>
    <string name="tips_notification_text">Click for tips!</string>
    <string name="tips_button">How to use</string>
    <string name="tips_button_description">A few tips about how to use AnySoftKeyboard</string>
    <string name="tips_title">AnySoftKeyboard tips</string>
    <string name="tips_pager_swipe_hint">&#2190;\u0020Swipe left or right for more tips&#2192;</string>
    <string name="tip_1_welcome_to_ask">Welcome to AnySoftKeyboard!</string>
    <string name="tip_1_how_to_access_settings">To access the settings; long press the ENTER key. You\'ll find a world
        of customizations there!
    </string>
    <string name="tip_2_gestures">I support gestures!</string>
    <string name="tip_2_gestures_tip">With a swipe, you can do a lot! Swipe from left to right will switch languages,
        swiping to the left will switch to symbols layout, swiping from the spacebar up will show up a utility keyboard,
        and swiping down will hide the keyboard.\nIt is configurable in the settings (remember? Long pressing the ENTER
        key).
    </string>
    <string name="tip_3_hidden_kbds">Hidden gems</string>
    <string name="tip_3_hidden_kbds_tip">There are some hidden keyboards:\n1) Swipe your finger from the spacebar and
        up, you\'ll get a utility keyboard with arrows and microphone (for voice input).\n2) Swipe your finger up
        outside the keyboard, and keep it pressed. This is the extension keyboard, with numbers and symbols.
    </string>
    <string name="tip_4_top_generic_row">Top row</string>
    <string name="tip_4_top_generic_row_tip">The top row is the same on all layouts, and it can be changed! The default
        top row includes symbols key (<i>123</i>), left and right arrow keys, and language key (<i>ABC</i>). You can
        replace this row in settings.
    </string>
    <string name="languages_cat">Languages</string>
    <string name="search_market_for_addons">Search for add-ons</string>
    <string name="search_market_for_keyboard_addons">Get more keyboards at <i>Play Store</i>…</string>
    <string name="search_market_for_quick_key_addons">Get more <i>Quick-Text</i> add-ons at <i>Play Store</i>…</string>
    <string name="ui_group">User interface</string>
    <string name="gesture_settings">Gestures</string>
    <string name="effects_group">Effects</string>
    <string name="switch_keyboard_on_space">Space switches keyboards</string>
    <string name="switch_keyboard_on_space_on_summary">Switch from symbols/numbers to alphabet when pressing space
    </string>
    <string name="switch_keyboard_on_space_off_summary">Do not switch from symbols/numbers to alphabet when pressing
        space
    </string>
    <string name="hide_soft_when_physical">Hide keyboard on physical key</string>
    <string name="hide_soft_when_physical_on_summary">Hide soft keyboard when physical keyboard is used</string>
    <string name="hide_soft_when_physical_off_summary">Show soft keyboard when physical keyboard is used</string>
    <string name="backword_support">Back-word support</string>
    <string name="backword_support_on_summary">Shifted Backspace will delete the last word</string>
    <string name="backword_support_off_summary">Shifted Backspace will delete the last character</string>
    <string name="swipe_tweak_group">Change swipe gesture actions</string>
    <string name="swipe_up_action">Swipe up</string>
    <string name="swipe_up_action_summary">Define the swipe up gesture action. Currently, %s</string>
    <string name="swipe_up_action_title">Select swipe up action</string>
    <string name="swipe_up_from_spacebar_action">Swipe spacebar up</string>
    <string name="swipe_up_from_spacebar_action_summary">Define the swipe up from spacebar gesture action. Currently, %s</string>
    <string name="swipe_up_from_spacebar_action_title">Select swipe spacebar up action</string>
    <string name="swipe_down_action">Swipe down</string>
    <string name="swipe_down_action_summary">Define the swipe down gesture action. Currently, %s</string>
    <string name="swipe_down_action_title">Select swipe down action</string>
    <string name="swipe_left_action">Swipe left</string>
    <string name="swipe_left_action_summary">Define the swipe left gesture action. Currently, %s</string>
    <string name="swipe_left_action_title">Select swipe left action</string>
    <string name="swipe_right_action">Swipe right</string>
    <string name="swipe_right_action_summary">Define the swipe right gesture action. Currently, %s</string>
    <string name="swipe_right_action_title">Select swipe right action</string>
    <string name="pinch_gesture_action">Pinch gesture</string>
    <string name="pinch_gesture_action_title">Select pinch gesture action</string>
    <string name="pinch_gesture_action_summary">Define the pinch gesture action. Currently, %s</string>
    <string name="separate_gesture_action">Stretch gesture</string>
    <string name="separate_gesture_action_title">Select stretch gesture action</string>
    <string name="separate_gesture_action_summary">Define the stretch gesture action. Currently, %s</string>
    <string name="settings_swipe_velocity_threshold_title">Swipe velocity threshold</string>
    <string name="settings_swipe_velocity_threshold_summary">The minimal swipe gesture speed. Currently, %s</string>
    <string name="settings_swipe_distance_threshold_title">Swipe distance threshold</string>
    <string name="settings_swipe_distance_threshold_summary">The minimal swipe gesture distance. Currently, %s</string>
    <string name="menu_even_more_settings">Even more&#8230;</string>
    <string name="special_dictionaries_group">Special dictionaries</string>
    <string name="always_use_fallback_user_dictionary">Use fallback User-dictionary</string>
    <string name="always_use_fallback_user_dictionary_on_summary">Use only AnySoftKeyboard\'s built-in User-dictionary mechanism (not recommended).</string>
    <string name="always_use_fallback_user_dictionary_off_summary">Try to use Android\'s built-in User-dictionary first (recommended).</string>
    <string name="tweaks_group">Tweaks</string>
    <string name="tweak_physical_keyboard_group">Physical keyboard tweaks</string>
    <string name="tweak_ux_group">Behavior tweaks</string>
    <string name="tweak_dictionary_group">Dictionary tweaks</string>
    <string name="settings_min_length_for_word_correction">Minimum word length for correction</string>
    <string name="use_keyrepeat">Use key repeat</string>
    <string name="use_keyrepeat_on_summary">Key repeat is enabled</string>
    <string name="use_keyrepeat_off_summary">Key repeat is disabled</string>
    <string name="insert_space_after_word_suggestion_selection">Space after candidate pick</string>
    <string name="insert_space_after_word_suggestion_selection_on_summary">Insert space after word suggestion select
    </string>
    <string name="insert_space_after_word_suggestion_selection_off_summary"/>
    <string name="double_space_to_period">Double space to period</string>
    <string name="double_space_to_period_summary">Double space tap will become period+space</string>
    <string name="cycle_all_symbols_keyboards">Cycle over all symbols</string>
    <string name="cycle_all_symbols_keyboards_on_summary">Symbols key will cycle over all symbols keyboards</string>
    <string name="cycle_all_symbols_keyboards_off_summary">Symbols key will only show main symbols keyboard</string>
    <string name="auto_caps">Auto-capitalization</string>
    <string name="grammer_group">Grammar</string>
    <string name="candidates_on">Show suggestions</string>
    <string name="candidates_on_summary">A list of suggested words will be displayed above the keyboard</string>
    <string name="candidates_off_summary">No suggestions will be shown</string>
    <string name="quick_fix">Quick fixes and abbreviations</string>
    <string name="quick_fix_summary">Corrects commonly typed mistakes, and expands abbreviations</string>
    <string name="allow_suggestions_restart">Suggestions restart</string>
    <string name="allow_suggestions_restart_summary">Restart word suggestion upon cursor movement</string>
    <string name="auto_complete">Auto select suggestion</string>
    <string name="auto_complete_summary">Space will select highlighted suggestion</string>
    <string name="keyboard_sandbox">Click for text testing</string>
    <string name="keyboard_sandbox_title">Type below to test your settings</string>
    <string name="keyboards_group_extra_template"><xliff:g id="enabledLayouts">%s</xliff:g>/<xliff:g id="totalLayouts">%s</xliff:g></string>
    <string name="keyboards_group">Keyboards</string>
    <string name="selected_add_on_summary">Now using \'<xliff:g id="addOnName">%s</xliff:g>\'
    </string>
    <string name="quick_text_keys_group">Quick text keys</string>
    <string name="quick_text_keys_order">Order of Quick Text groups</string>
    <string name="quick_text_keys_order_dialog_title">Define groups order</string>
    <string name="quick_text_keys_order_summary">The order in which the Quick Text groups will be shown in the popup.</string>
    <string name="top_generic_row_group">Common top generic row</string>
    <string name="top_generic_row_dialog_title">Select row type</string>
    <string name="top_generic_row_summary">Selected top row: %s</string>
    <string name="top_generic_row_list_title">Select row type</string>
    <string name="bottom_generic_row_group">Common bottom generic row</string>
    <string name="bottom_generic_row_group_summary">Common bottom keys row across all your keyboards</string>
    <string name="bottom_generic_row_dialog_title">Select row type</string>
    <string name="bottom_generic_row_summary">Selected bottom row: %s</string>
    <string name="bottom_generic_row_list_title">Select row type</string>
    <string name="extension_keyboard_group">Extension keyboard</string>
    <string name="extension_keyboard_dialog_title">Select keyboard</string>
    <string name="extension_keyboard_summary">Selected Extension Keyboard: %s</string>
    <string name="extension_keyboard_list_title">Select keyboard</string>
    <string name="keyboard_theme_group">Keyboard themes</string>
    <string name="keyboard_themes_group_summary">Various appearance themes for your on-screen keyboard</string>
    <string name="keyboard_theme_summary">Selected theme: %s</string>
    <string name="keyboard_theme_list_title">Select theme</string>
    <string name="should_swap_punctuation_and_space_title">Swap punctuation and space</string>
    <string name="should_swap_punctuation_and_space_summary"/>
</resources>