<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="prefs_addons_screen"
                  android:title="@string/top_generic_row_group">

    <EditTextPreference
            android:autoText="true"
            android:capitalize="sentences"
            android:dialogTitle="@string/keyboard_sandbox_title"
            android:key="keyboards_sandbox_3"
            android:lines="3"
            android:persistent="false"
            android:singleLine="false"
            android:title="@string/keyboard_sandbox">
    </EditTextPreference>

    <Preference
            android:key="search_for_addon_packs_at_market"
            android:persistent="false"
            android:title="@string/search_market_for_addons"/>

    <PreferenceCategory
            android:key="category_addons_group"
            android:title="@string/top_generic_row_group">

        <com.anysoftkeyboard.ui.settings.widget.AddOnListPreference
                android:defaultValue="@string/settings_default_top_row_key"
                android:dialogTitle="@string/top_generic_row_dialog_title"
                android:entries="@array/pref_list_empty_types"
                android:entryValues="@array/pref_list_empty_values"
                android:key="@string/settings_key_ext_kbd_top_row_key"
                android:persistent="true"
                android:summary="@string/top_generic_row_summary"
                android:title="@string/top_generic_row_list_title"/>
    </PreferenceCategory>

</PreferenceScreen>